tests/baselines/reference/importHelpersWithLocalCollisions(module=system).errors.txt
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(2,1): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    declare var dec: any, __decorate: any;
    @dec export class A {
    ~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    
    }
    
    const o = { a: 1 };
    const y = { ...o };
    
==== node_modules/tslib/index.d.ts (0 errors) ====
    export declare function __extends(d: Function, b: Function): void;
    export declare function __decorate(decorators: Function[], target: any, key?: string | symbol, desc?: any): any;
    export declare function __param(paramIndex: number, decorator: Function): Function;
    export declare function __metadata(metadataKey: any, metadataValue: any): Function;
    export declare function __awaiter(thisArg: any, _arguments: any, P: Function, generator: Function): any;
    